2장 나머지 정리

--- a/2장.md
+++ b/2장.md
@@ -121,8 +121,125 @@ count 값이 AtomicLong 으로 변경되었으므로 카운터가 증가할 때 
 
 
 ### 락(lock)
+- 자바에서는 단일 연산 특성 보장을 위해 synchronized라는 구문으로 사용할 수 있는 락을 제공함
+
+~~~java
+synchronized(lock) {
+  //lock으로 보호된 공유 상태에 접근하거나 해당 상태를 수정
+}
+~~~
 
 
 
+- 모든 자바 객체는 락으로 사용할 수 있는데, 자바에 내장된 락을 *암묵적 락* 또는 *모니터 락*이라고 한다. (Synchronized)
+
+- 스레드 B가 가지고 있는 락을 A가 얻으려면 A는 B가 해당 락을 놓을 때까지 기다린다.
+
+~~~java
+@ThreadSafe
+public class SynchronizedFactorizer implements Servlet {
+  @GuardedBy("this") private BigInteger lastNumber;
+  @GuardedBy("this") private BigInteger[] lastFactors;
+  
+  public synchronized void service(ServletRequest req, ServletResponse resp) {
+    BigInteger i = extractFromRequest(req);
+    if(i.equals(lastNumber))
+      encodeIntoResponse (resp, lastFactors);
+    else {
+      BigInteger[] factors = factor(i);
+      lastNumber = i;
+      lastFactors = factors;
+      encodeIntoResponse(resp, factors);
+    }
+  }
+}
+~~~
+
+- synchronized 처리함으로써 한 스레드가 해당 블록을 수행중일경우 다른 스레드는 해당 블록을 실행할 수 없다.
 
 
+
+### 재진입성
+
+- 재진입성이란 확보요청 단위가 아닌 스레드 단위로 락을 얻는것을 의미한다.
+
+~~~java
+public class Widget {
+  public synchronized void doSomething() {
+    ...
+  }
+}
+
+public class LoggingWidget extends Widget {
+  public synchronized void doSomething() {
+    System.out.println(toString() + ": calling doSomething");
+    super.doSomething();
+  }
+}
+~~~
+
+위 코드를 보게되면 Widget, LoggingWidget 내 doSomething() 메서드가 모두 synchronized로 선언되어있다.
+
+각각 진행하기 전에 Widget에 대한 락을 얻으려고 시도할것인데, 만약 암묵적인 락이 재진입 가능하지 않았다면,
+
+누군가 락을 확보했기 때문에 super.doSomething() 호출에서 락을 영원히 얻지 못하고 멈춰있게 될 것이다.
+
+
+
+- 여러 스레드에서 접근할 수 있고 변경 가능한 모든 변수를 대상으로 해당 변수에 접근할 때는 항상 동일한 락을 먼저 확보한 상태여야 한다.
+- 특정 변수에 대한 접근을 조율하기 위해 동기화할 때는 해당 변수에 접근하는 모든부분을 동기화 해야한다.
+- 모든 변경할 수 있는 공유변수는 정확하게 단 하나의 락으로 보호해야 하며, 어느 락으로 보호하고 있는지 다른 개발자가 알 수 있게 명시해야한다.
+- 여러 변수에 대한 불변조건이 있으면 해당 변수들은 모두 같은 락으로 보호해야 한다.
+
+
+
+SynchronizedFactorizer 클래스처럼 service 메소드 전체를 동기화하면 성능에 좋지 않다.
+
+일반적으로 동시에 여러 요청을 처리할 수 있는 서블릿 프레임웍의 의도와 배치되고, 요청이 많아 질 경우 속도가 느리게 된다.
+
+그렇다고 synchronized 블록을 너무 작게 줄이지도 말고, 단일연산으로 처리해야 하는 작업을 여러 synchronized블록으로 나누면 안된다.
+
+아래 코드를 통해 어떻게 synchronized가 사용되었는지 확인해보자.
+
+
+
+~~~java
+@ThreadSafe
+public class CachedFactorizer implements Servlet {
+  @GuardedBy("this") private BigInteger lastNumber;
+  @GuardedBy("this") private BigInteger[] lastFactors;
+  @GuardedBy("this") private long hits;
+  @GuardedBy("this") private long cacheHits;
+  
+  public synchronized long getHits() { return hits; }
+  public synchronized double getCacheHitRatio() {
+    return (double) cacheHits / (double) hits;
+  }
+  
+  public void service(ServletRequest req, ServletResponse resp) {
+    BigInteger i = extractFromRequest(req);
+    BigInteger[] factors = null;
+    synchronized (this) {
+      ++hits;
+      if(i.equals(lastNumber)) {
+        ++cacheHits;
+        factors = lastFactors.clone();
+      }
+    }
+    if(factors == null) {
+      factors = factor(i);
+      synchronized (this) {
+        lastNumber = i;
+        lastFactors = factors.clone();
+      }
+    }
+    encodeIntoResponse(resp, factors);
+  }
+}
+~~~
+
+
+
+- Synchronized 블록을 사용하여 단일연산작업을 사용하므로 hits를 AutomicLong 사용하지 않아도 됨.
+- 시간이 오래걸릴 수 있는 인수분해 작업인 factor(i)를 진행하기 전에 락을 놓고있음.
+- 복잡하고 오래 걸리는 계산작업, 네트웍작업, 사용자 입출력 작업과 같이 빨리 끝나지 않을 수 있는 작업을 하는 부분에는 가능한 락을 잡지 말자.
