금요일까지 확인 필요

--- a/2장.md
+++ b/2장.md
@@ -243,3 +243,21 @@ public class CachedFactorizer implements Servlet {
 - Synchronized 블록을 사용하여 단일연산작업을 사용하므로 hits를 AutomicLong 사용하지 않아도 됨.
 - 시간이 오래걸릴 수 있는 인수분해 작업인 factor(i)를 진행하기 전에 락을 놓고있음.
 - 복잡하고 오래 걸리는 계산작업, 네트웍작업, 사용자 입출력 작업과 같이 빨리 끝나지 않을 수 있는 작업을 하는 부분에는 가능한 락을 잡지 말자.
+
+
+
+
+
+
+
+//암묵적락 , 명시적락
+
+//db시퀀스에대해
+
+//자바8 스트림 스레드안전한가 
+
+//JVM 재진입성 특징
+
+// 56page -> 캐시 
+
+질문1 이슈1
